add freecad to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#########
+# KiCad #
+#########
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
@@ -26,3 +29,8 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+###########
+# FreeCAD #
+###########
+*.FCSTD1
