--- a/.github/workflows/fabrication.yml
+++ b/.github/workflows/fabrication.yml
@@ -33,3 +33,20 @@ jobs:
       with:
         name: ERC_Output
         path: hardware/kicad/ft231x_breakout_usb_power_switch/fabrication
+
+  DRC:
+    runs-on: ubuntu-latest
+    container: setsoft/kicad_auto:latest
+    needs: ERC
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Run DRC
+      run: |
+        make -C hardware/kicad/ft231x_breakout_usb_power_switch/ drc¬
+    - name: Retrieve results
+      uses: actions/upload-artifact@v1
+      with:
+        name: DRC_Output
+        path: hardware/kicad/ft231x_breakout_usb_power_switch//fabrication
