--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -38,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: output
-        path: 'hardware/kicad/ft231x_breakout_usb_power_switch/output
+        path: 'hardware/kicad/ft231x_breakout_usb_power_switch/output'
