--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -21,7 +21,7 @@ jobs:
   example:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2¬
+    - uses: actions/checkout@v2
     - uses: INTI-CMNB/KiBot@v0.7.0
       with:
       # Required - kibot config file
