--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -20,6 +20,7 @@ on:
 jobs:
   example:
     runs-on: ubuntu-latest
+    container: setsoft/kicad_auto:latest
     steps:
     - uses: actions/checkout@v2
     - uses: INTI-CMNB/KiBot@v0.7.0
