--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -21,19 +21,21 @@ jobs:
   example:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: INTI-CMNB/KiBot@v0.7.0
-      with:
-      # Required - kibot config file
-        config: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml'
-      # optional - prefix to output defined in config
-        dir: 'hardware/kicad/ft231x_breakout_usb_power_switch/output'
-      # optional - schematic file
-        schema: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.sch'
-      # optional - PCB design file
-        board: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kicad_pcb'
-    - name: upload results
-      uses: actions/upload-artifact@v2
-      with:
-        name: output
-        path: 'hardware/kicad/ft231x_breakout_usb_power_switch/output'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: KiBot Get
+        uses: INTI-CMNB/KiBot@v0.7.0
+        with:
+        # Required - kibot config file
+          config: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml'
+        # optional - prefix to output defined in config
+          dir: 'hardware/kicad/ft231x_breakout_usb_power_switch/output'
+        # optional - schematic file
+          schema: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.sch'
+        # optional - PCB design file
+          board: 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kicad_pcb'
+      - name: upload results
+        uses: actions/upload-artifact@v2
+        with:
+          name: output
+          path: 'hardware/kicad/ft231x_breakout_usb_power_switch/output'
