--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -1,4 +1,4 @@
-name: example
+name: kibot
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -8,13 +8,13 @@ on:
     paths:
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.sch'
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kicad_pcb'
-      - '.github/workflows/fabrication.yml'
+      - '.github/workflows/kibot.yml'
   pull_request:
     branches: [ main ]
     paths:
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.sch'
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kicad_pcb'
-      - '.github/workflows/fabrication.yml'
+      - '.github/workflows/kibot.yml'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
