--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ hardware/kicad/ft231x_breakout_usb_power_switch/fabrication
 # FreeCAD #
 ###########
 *.FCSTD1
+
+##########
+# Sphinx #
+### ######
+docsrc/_build/
