--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -119,3 +119,23 @@ outputs:
     layers:
       - 'F.Cu'
       - 'B.Cu'
+
+  - name: pcb_top_g
+    comment: "PCB render top green"
+    type: pcbdraw
+    dir: fabrication/pcbdraw_dir
+    options:
+      format: jpg
+      show_components: none
+      dpi: 600
+
+  - name: pcb_bot_g
+    comment: "PCB render bottom green"
+    type: pcbdraw
+    dir: fabrication/pcbdraw_dir
+    options:
+      format: jpg
+      bottom: True
+      show_components: none
+      dpi: 600
+
