--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -92,33 +92,58 @@ outputs:
       # IBoM option, avoid using in conjunction with KiBot variants/filters
       variants_whitelist: ''
 
-  - name: 'gerbers'
-    comment: "Gerbers for the board house"
+  - name: JLCPCB_gerbers
+    comment: Gerbers compatible with JLCPCB
     type: gerber
-    dir: gerber_dir
-    options:
-      # generic layer options
-      exclude_edge_layer: false
-      exclude_pads_from_silkscreen: false
+    dir: JLCPCB
+    options: &gerber_options
+      exclude_edge_layer: true
+      exclude_pads_from_silkscreen: true
       plot_sheet_reference: false
       plot_footprint_refs: true
-      plot_footprint_values: true
+      plot_footprint_values: false
       force_plot_invisible_refs_vals: false
       tent_vias: true
-      line_width: 0.15
-
-      # gerber options
-      use_aux_axis_as_origin: false
-      subtract_mask_from_silk: true
       use_protel_extensions: false
-      gerber_precision: 4.5
-      create_gerber_job_file: true
-      use_gerber_x2_attributes: true
+      create_gerber_job_file: false
+      disable_aperture_macros: true
+      gerber_precision: 4.6
+      use_gerber_x2_attributes: false
       use_gerber_net_attributes: false
-
+      line_width: 0.1
+      subtract_mask_from_silk: true
     layers:
-      - 'F.Cu'
-      - 'B.Cu'
+      # Note: a more generic approach is to use 'copper' but then the filenames
+      # are slightly different.
+      - F.Cu
+      - B.Cu
+      - F.SilkS
+      - B.SilkS
+      - F.Mask
+      - B.Mask
+      - Edge.Cuts
+
+  - name: JLCPCB_drill
+    comment: Drill files compatible with JLCPCB
+    type: excellon
+    dir: JLCPCB
+    options:
+      pth_and_npth_single_file: false
+      pth_id: '-PTH'
+      npth_id: '-NPTH'
+      metric_units: false
+      output: "%f%i.%x"
+
+#  - name: JLCPCB
+#    comment: ZIP file for JLCPCB
+#    type: compress
+#    dir: JLCPCB
+#    options:
+#      files:
+#        - from_output: JLCPCB_gerbers
+#          dest: /
+#        - from_output: JLCPCB_drill
+#          dest: /
 
   - name: pcb_top_g
     comment: "PCB render top green"
