Add JLCPCB with stencil config

--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -16,6 +16,7 @@ import:
   - ../configs/Elecrow.kibot.yaml
   - ../configs/FusionPCB.kibot.yaml
   - ../configs/JLCPCB.kibot.yaml
+  - ../configs/JLCPCB_w-stencil.kibot.yaml
   - ../configs/P-Ban.kibot.yaml
   - ../configs/PCBWay.kibot.yaml
 
