--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -21,12 +21,30 @@ import:
   - ../configs/PCBWay.kibot.yaml
 
 filters:
- - name: 'exclude_any'
-   type: 'generic'
-   comment: 'Exclude logos, testpoints, fiducials and power'
-   exclude_any:
-     - column: Reference
-       regex: '^(G|#|TP|F).*'
+  - name: 'exclude_any'
+    type: 'generic'
+    comment: 'Exclude logos, testpoints, fiducials and power'
+    exclude_any:
+      - column: Reference
+        regex: '^(G|#|TP|F).*'
+
+  - name: fix_rotation
+    comment: 'Adjust rotation for JLC'
+    type: rot_footprint
+
+  - name: only_jlc_parts
+    comment: 'Only parts with JLC code'
+    type: generic
+    include_only:
+      - column: 'LCSC#'
+        regex: '^C\d+'
+
+variants:
+  - name: rotated
+    comment: 'Just a place holder for the rotation filter'
+    type: kibom
+    variant: rotated
+    pre_transform: fix_rotation
 
 outputs:
   - name: 'print_sch'
@@ -198,4 +216,49 @@ outputs:
       separate_files_for_front_and_back: true
       only_smd: true
 
+  - name: 'position'
+    comment: "Pick and place file, JLC style"
+    type: position
+    dir: Position
+    options:
+      variant: rotated
+      output: '%f-%i_%r_cpl_jlc.%x'
+      format: CSV
+      units: millimeters
+      separate_files_for_front_and_back: false
+      only_smd: true
+      columns:
+        - id: Ref
+          name: Designator
+        - Val
+        - Package
+        - id: PosX
+          name: "Mid X"
+        - id: PosY
+          name: "Mid Y"
+        - id: Rot
+          name: Rotation
+        - id: Side
+          name: Layer
+
+  - name: 'bom'
+    comment: "BoM for JLC"
+    type: bom
+    dir: BoM
+    options:
+      output: '%f-%i_%r_jlc.%x'
+      exclude_filter: 'only_jlc_parts'
+      ref_separator: ','
+      columns:
+        - field: Value
+          name: Comment
+        - field: References
+          name: Designator
+        - Footprint
+        - field: 'LCSC#'
+          name: 'LCSC Part #'
+      csv:
+        hide_pcb_info: true
+        hide_stats_info: true
+        quote_all: true
 
