change footprint FT231XS to fix lcsc rotation filter

--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -95,12 +95,18 @@ outputs:
           name: Part
         - field: Value
           name: Value
-        - field: manf#
-          name: P/N
         - field: manf
           name: Manufacturer
+        - field: manf#
+          name: 'Mfr. Part #'
+        - field: LCSC#
+          name: 'LCSC Part #'
+        - field: element14#
+          name: 'element14 Part #'
+        - field: mouser#
+          name: 'Mouser Part #'
         - field: digikey#
-          name: 'Cod. Digi-Key'
+          name: 'Digi-Key Part #'
         - Footprint
         - field: Desc
           name: Description
