Add substitute field

--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -99,6 +99,8 @@ outputs:
           name: Manufacturer
         - field: manf#
           name: 'Mfr. Part #'
+        - field: substitute
+          name: Substitute
         - field: LCSC#
           name: 'LCSC Part #'
         - field: element14#
