Add value to kibot kibom grouping

--- a/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_breakout_usb_power_switch/ft231x_breakout_usb_power_switch.kibot.yaml
@@ -114,7 +114,7 @@ outputs:
           name: Description
         - 'Quantity Per PCB'
       exclude_filter: 'exclude_any'
-      group_fields:  ['digikey#', 'Part']
+      group_fields:  ['digikey#', 'Part', 'Value']
       normalize_values: true
       normalize_locale: true
       html:
