--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    step:
+    steps:
       - name: Retrieve
         uses: actions/download-artifact@v2
         with:
