--- a/.github/workflows/ft231x_breakout_usb_power_switch.yml
+++ b/.github/workflows/ft231x_breakout_usb_power_switch.yml
@@ -112,9 +112,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Retrieve
-        uses: actions/download-artifact@v1
-        with:
-          name: |
-            ERC_Output
-            FabSch_Output
+        uses: actions/download-artifact@v2
 
+      - name: Display structure of downloaded files
+        run: ls -R
