--- a/.github/workflows/ft231x_breakout_usb_power_switch.yml
+++ b/.github/workflows/ft231x_breakout_usb_power_switch.yml
@@ -139,6 +139,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./fabrication.zip
+          asset_path: ./fabrication/fabrication.zip
           asset_name: fabrication.zip
           asset_content_type: application/zip
