move tags action again

--- a/.github/workflows/ft231x_breakout_usb_power_switch.yml
+++ b/.github/workflows/ft231x_breakout_usb_power_switch.yml
@@ -10,8 +10,9 @@ on:
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/*.kibot.yaml'
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/Makefile'
       - '.github/workflows/ft231x_breakout_usb_power_switch.yml'
-  tags:
-    - 'v*'
+  push:
+    tags:
+      - 'v*'
   pull_request:
     paths:
       - 'hardware/kicad/ft231x_breakout_usb_power_switch/*.sch'
