remove fiducials from bom

--- a/hardware/kicad/ft231x_uart_usb_power_switch/ft231x_uart_usb_power_switch.kibot.yaml
+++ b/hardware/kicad/ft231x_uart_usb_power_switch/ft231x_uart_usb_power_switch.kibot.yaml
@@ -26,7 +26,7 @@ filters:
     comment: 'Exclude logos, testpoints, mounting holes, solder jumpers'
     exclude_any:
       - column: Reference
-        regex: '^(G|#|TP|H|JP|LOGO).*'
+        regex: '^(G|#|TP|H|JP|LOGO|FID).*'
 
   - name: fix_rotation
     comment: 'Adjust rotation for JLC'
