add kikit stencil to workflow

--- a/.github/workflows/ft231x_uart_usb_power_switch.yml
+++ b/.github/workflows/ft231x_uart_usb_power_switch.yml
@@ -109,6 +109,7 @@ jobs:
     - name: Run PCB stuff
       run: |
         make -C hardware/kicad/ft231x_uart_usb_power_switch pcb_fab
+        make -C hardware/kicad/ft231x_uart_usb_power_switch pcb_stencil
 
     - name: Retrieve results
       if: ${{ always() }}
